--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "express-session": "^1.17.2",
+    "heroku": "^7.54.1",
     "http-errors": "~1.6.3",
     "jade": "^1.11.0",
     "mongoose": "^5.12.13",
